# fiscal_api

./: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  POC_RESULTS.md  README.md  main.py  pyproject.toml  requirements.txt  test_api.py  test_xml_sample.xml
app/: __init__.py
app/api/: __init__.py
app/api/routes/: __init__.py  documents.py  health.py  jobs.py  xml_reader.py
app/core/: __init__.py  config.py  logging.py
app/models/: __init__.py  fiscal.py
app/services/: __init__.py  government_api.py  xml_processor.py
docs/architecture/: ARQUITETURA_PRODUCAO_DETALHADA.md  ARQUITETURA_PRODUCAO_TODO.md  ARQUITETURA_RESUMO_EXECUTIVO.md
docs/bug-fixes/: BUG_FIX_REPORT.md  todo_bug_fix.md
docs/endpoints/: COMANDOS_CURL_XML_READER.md  CURL_COMPLETE_GUIDE.md  ENDPOINT_XML_READER_DOCUMENTACAO.md
docs/roadmap/: MVP_ROADMAP_TODO.md  ROADMAP_EXECUTIVE_SUMMARY.md  ROADMAP_MVP_API_FISCAL.md
